in replacement for the existing Template modules, Template::TT2.  They're
not on CPAN at the time of writing (although they might be by the time
you read this), but the source code is avaiable via github at
L<http://github.com/abw/Template-TT2> and L<http://github.com/abw/Template-TT3>.

=head2 Version 0.10 - Not Yet released

Added L<Badger::Comparable>, L<Badger::Duration> and L<Badger::Filter>.

Refactored parts of L<Badger::Config>.

Added no_config() method to L<Badger::Hub>.

Fixed a bug in the L<auto_can|Badger::Class::Methods/auto_can()> feature
of L<Badger::Class::Methods> which prevented it from working with subclasses.

Fixed a bug in L<Badger::Debug> L<dump_ref()|Badger::Debug/dump_ref()> 
to make it directly call other C<dump_XXX()> functions instead of relying on 
inheritance of those methods through C<$self>.

Added L<plurality()|Badger::Utils/plurality()>, 
L<inflect()|Badger::Utils/inflect()>,
L<list_each()|Badger::Utils/list_each()>,
L<hash_each()|Badger::Utils/hash_each()>,
L<extend()|Badger::Utils/extend()>,
L<split_to_list()|Badger::Utils/split_to_list()>,
L<join_uri()|Badger::Utils/join_uri()> and
L<resolve_uri()|Badger::Utils/resolve_uri()>,
to L<Badger::Utils>.

Added additional delegate hooks to L<Badger::Utils> to load utility functions
in L<Badger::Filesystem>, L<Badger::Timestamp>, L<Badger::Duration>,
L<Badger::Logic> and L<Badger::URL>.

Squashed a non-numerical warning in Badger::Timestamp.

Added the L<UTF8|Badger::Constants/UTF8>, L<JSON|Badger::Constants/JSON>
and L<YAML|Badger::Constants/YAML> constants to L<Badger::Constants>.

Fixed L<Badger::Codec::YAML> to work better with L<YAML::XS> and 
L<Badger::Codec::JSON> to work better with L<JSON::XS>.

=head2 Version 0.09 - 8th February 2012

Added L<Badger::Codec::Timestamp>. Changed L<Badger::Timestamp> to numify
values to remove leading zeroes (e.g. 2012/04/20 now yields a month of 4
instead of 04).

Fixed some obscure bugs in the module loading code in L<Badger::Class> and