@@ -49,11 +49,11 @@ my $name = $config->get('site.name');
 is( $name, "example", "got name: $name" );
 
 my $pages = $config->get('pages');
-ok( $pages, "got pages" . main->dump_data($pages) );
+ok( $pages, "got pages" ); #. main->dump_data($pages) );
 
 is( $pages->{ about }->{ name }, 'About Us', 'got "about" page' );
 is( $pages->{"auth/login"}->{ name }, 'Login', 'got "auth/login" page' );
-is( $pages->{"/register"}->{ name }, 'Register', 'got "/register" page' );
+is( $pages->{"register"}->{ name }, 'Register', 'got "register" page' );
 
 #-----------------------------------------------------------------------
 # examples from docs
